force-app/main/default/objects/hed__Course_Offering__c/fields/hed__Capacity__c.field-meta.xml
<CustomField>
    <fullName>hed__Capacity__c</fullName>
    <description>The maximum number of students for this Course Offering.</description>
    <inlineHelpText>Le nombre maximum d&apos;étudiants pour cette offre de cours.</inlineHelpText>
    <label>Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>