force-app/main/default/objects/hed__Course_Offering__c/fields/hed__Course__c.field-meta.xml
<CustomField>
    <fullName>hed__Course__c</fullName>
    <description>Lookup to the Course record that this Course Offering is associated with.</description>
    <label>Course</label>
    <referenceTo>hed__Course__c</referenceTo>
    <relationshipLabel>Course Offerings</relationshipLabel>
    <relationshipName>Course_Offerings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>