force-app/main/default/objects/hed__Course_Offering__c/fields/hed__Section_ID__c.field-meta.xml
<CustomField>
    <fullName>hed__Section_ID__c</fullName>
    <description>The Section ID for this Course Offering. Section ID is typically used when a Course offers multiple sections during a single Term.</description>
    <inlineHelpText>L&apos;ID de section de cette offre de cours. Il est généralement utilisé lorsqu&apos;un cours offre plusieurs sections une période scolaire unique.</inlineHelpText>
    <label>Section ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>