force-app/main/default/objects/hed__Course_Offering__c/fields/Public_Concern__c.field-meta.xml
<CustomField>
    <fullName>Public_Concern__c</fullName>
    <label>Public Concerné</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AUBBA</fullName>
            </value>
            <value>
                <fullName>BBA0</fullName>
            </value>
            <value>
                <fullName>BBA1</fullName>
            </value>
            <value>
                <fullName>BBA2</fullName>
            </value>
            <value>
                <fullName>BBA3</fullName>
            </value>
            <value>
                <fullName>BBA4</fullName>
            </value>
            <value>
                <fullName>BBAP2</fullName>
            </value>
            <value>
                <fullName>BBAS</fullName>
            </value>
            <value>
                <fullName>SABBA</fullName>
            </value>
            <value>
                <fullName>GE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>