force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Code_periode__c.field-meta.xml
<CustomField>
    <fullName>SIS_Code_periode__c</fullName>
    <label>Code période</label>
    <length>2</length>
    <type>Text</type>
</CustomField>