force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Competences__c.field-meta.xml
<CustomField>
    <fullName>SIS_Competences__c</fullName>
    <label>TBD Competences</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>