force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_completion_method_indicator__c.field-meta.xml
<CustomField>
    <fullName>SIS_completion_method_indicator__c</fullName>
    <formula>CASE(
SIS_Evaluation_Methods_Final_Weight__c,
   100, IMAGE( &apos;/img/samples/light_green.gif&apos;,&quot;OK&quot;),
   IMAGE( &apos;/img/samples/light_red.gif&apos; , &quot;ERROR&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Niveau de complétude des modalités</label>
    <type>Text</type>
</CustomField>