force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Cours_Level__c.field-meta.xml
<CustomField>
    <fullName>SIS_Cours_Level__c</fullName>
    <description>Picklist dépendante du résultat de la picklist &quot;Code de l&apos;activité pédagogique.
Utilisé dans la codification du cours.</description>
    <label>Niveau du cours</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SIS_Pedagogical_Code__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>SIS_Course_Level</valueSetName>
    </valueSet>
</CustomField>