force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Cours_Session__c.field-meta.xml
<CustomField>
    <fullName>SIS_Cours_Session__c</fullName>
    <formula>NOT(ISBLANK(SIS_Course__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cours Session</label>
    <type>Checkbox</type>
</CustomField>