force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Course__c.field-meta.xml
<CustomField>
    <fullName>SIS_Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <referenceTo>hed__Course_Offering__c</referenceTo>
    <relationshipLabel>Session de Cours</relationshipLabel>
    <relationshipName>Cours</relationshipName>
    <type>Lookup</type>
</CustomField>