force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Course_coefficient__c.field-meta.xml
<CustomField>
    <fullName>SIS_Course_coefficient__c</fullName>
    <label>Course coefficient</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>