force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Course_Concepts_Theories__c.field-meta.xml
<CustomField>
    <fullName>SIS_Course_Concepts_Theories__c</fullName>
    <inlineHelpText>Section 5.1.1 du syllabus / Syllabus 5.1.1 section</inlineHelpText>
    <label>Concepts et théories</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>