force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Course_creation_date__c.field-meta.xml
<CustomField>
    <fullName>SIS_Course_creation_date__c</fullName>
    <inlineHelpText>Date de création réelle du cours</inlineHelpText>
    <label>Course creation date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>