force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Course_discipline__c.field-meta.xml
<CustomField>
    <fullName>SIS_Course_discipline__c</fullName>
    <label>Course discipline</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounting &amp; Finance</fullName>
            </value>
            <value>
                <fullName>Human relations &amp; regulations</fullName>
            </value>
            <value>
                <fullName>Innovation &amp; Entrepreneurship</fullName>
            </value>
            <value>
                <fullName>LEAD OB &amp;d Leadership</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Operations, Data et Artificial Intelligence (ODAI) for business</fullName>
            </value>
            <value>
                <fullName>Quantitative finance &amp; economics</fullName>
            </value>
            <value>
                <fullName>Social Sciences and Humanities</fullName>
            </value>
            <value>
                <fullName>Sport Management</fullName>
            </value>
            <value>
                <fullName>Strategy &amp; business models</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>