force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Course_Evaluation_Description__c.field-meta.xml
<CustomField>
    <fullName>SIS_Course_Evaluation_Description__c</fullName>
    <inlineHelpText>Texte avant le tableau des évaluations (section 6 du syllabus)
Text before assesments method table (syllabus section 6)</inlineHelpText>
    <label>Description des évaluations</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>