force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Course_language_teaching_code__c.field-meta.xml
<CustomField>
    <fullName>SIS_Course_language_teaching_code__c</fullName>
    <label>Course language teaching code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SIS_Pedagogical_Code__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>SIS_Langue_d_enseignement</valueSetName>
    </valueSet>
</CustomField>