force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Course_learning_hours__c.field-meta.xml
<CustomField>
    <fullName>SIS_Course_learning_hours__c</fullName>
    <inlineHelpText>Champ caché pour Syllabus - Hidden field for Syllabus</inlineHelpText>
    <label>Total heures d&apos;apprentissage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>