force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Course_Manager__c.field-meta.xml
<CustomField>
    <fullName>SIS_Course_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cours</relationshipName>
    <type>Lookup</type>
</CustomField>