force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Course_Manager_contact__c.field-meta.xml
<CustomField>
    <fullName>SIS_Course_Manager_contact__c</fullName>
    <label>Coordonnées du professeur</label>
    <type>TextArea</type>
</CustomField>