force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Course_obligation_status__c.field-meta.xml
<CustomField>
    <fullName>SIS_Course_obligation_status__c</fullName>
    <label>Course obligation status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Obligatoire</fullName>
            </value>
            <value>
                <fullName>Semi obligatoire</fullName>
            </value>
            <value>
                <fullName>Electif</fullName>
            </value>
            <value>
                <fullName>Séminaire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>