force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Course_open_to_online_inscriptions__c.field-meta.xml
<CustomField>
    <fullName>SIS_Course_open_to_online_inscriptions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Course open to online inscriptions</label>
    <type>Checkbox</type>
</CustomField>