force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Course_other__c.field-meta.xml
<CustomField>
    <fullName>SIS_Course_other__c</fullName>
    <inlineHelpText>Lié à la section 9 du syllabus.</inlineHelpText>
    <label>Autres informations utiles</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>