force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Course_People_met__c.field-meta.xml
<CustomField>
    <fullName>SIS_Course_People_met__c</fullName>
    <inlineHelpText>Section 5.2.2 - Syllabus</inlineHelpText>
    <label>Personnes rencontrées</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>