force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Course_rules__c.field-meta.xml
<CustomField>
    <fullName>SIS_Course_rules__c</fullName>
    <description>Règles du cours</description>
    <inlineHelpText>Section 1 - Syllabus</inlineHelpText>
    <label>Règles du cours</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>