force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Course_Sequence_Description__c.field-meta.xml
<CustomField>
    <fullName>SIS_Course_Sequence_Description__c</fullName>
    <inlineHelpText>Texte avant le tableau des séquences (Section 7 du syllabus) - Text before sequences table (Syllabus section 7)</inlineHelpText>
    <label>Description des séquences</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>