force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Course_sub_category_code__c.field-meta.xml
<CustomField>
    <fullName>SIS_Course_sub_category_code__c</fullName>
    <label>Course sub category code</label>
    <type>TextArea</type>
</CustomField>