force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Course_UE_Unit_of_work__c.field-meta.xml
<CustomField>
    <fullName>SIS_Course_UE_Unit_of_work__c</fullName>
    <label>Course UE Unit of work</label>
    <type>TextArea</type>
</CustomField>