force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Course_update_date__c.field-meta.xml
<CustomField>
    <fullName>SIS_Course_update_date__c</fullName>
    <label>Course update date</label>
    <type>Date</type>
</CustomField>