force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_CPP__c.field-meta.xml
<CustomField>
    <fullName>SIS_CPP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CPP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cours1</relationshipName>
    <type>Lookup</type>
</CustomField>