force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Day_number_of_formation_module__c.field-meta.xml
<CustomField>
    <fullName>SIS_Day_number_of_formation_module__c</fullName>
    <formula>CEILING( SIS_Hours_number_of_formation_module__c  / 8 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Remplissage automatique à partir du nombre d&apos;heures du module de formation. 1 journée = 8 heures.</inlineHelpText>
    <label>Days number of formation module</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>