force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Delivery_mode_ID__c.field-meta.xml
<CustomField>
    <fullName>SIS_Delivery_mode_ID__c</fullName>
    <label>Delivery mode ID</label>
    <type>TextArea</type>
</CustomField>