force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_ECTS_Credit_number__c.field-meta.xml
<CustomField>
    <fullName>SIS_ECTS_Credit_number__c</fullName>
    <label>ECTS Credit number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>