force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_English_course_name__c.field-meta.xml
<CustomField>
    <fullName>SIS_English_course_name__c</fullName>
    <label>English course name</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>