force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Evaluation_Methods_Final_Weight__c.field-meta.xml
<CustomField>
    <fullName>SIS_Evaluation_Methods_Final_Weight__c</fullName>
    <description>Champ roll-up sur le coefficient des modalités d&apos;évaluation associées à ce cours.
Le champ doit avoir un total de 100 pour pouvoir soumettre le syllabus pour approbation.</description>
    <label>% des modalités d&apos;évaluation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>