force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Hours_number_of_formation_module__c.field-meta.xml
<CustomField>
    <fullName>SIS_Hours_number_of_formation_module__c</fullName>
    <label>Hours number of formation module</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>