force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Last_reminder__c.field-meta.xml
<CustomField>
    <fullName>SIS_Last_reminder__c</fullName>
    <label>Last reminder</label>
    <type>DateTime</type>
</CustomField>