force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Minimum_staffing__c.field-meta.xml
<CustomField>
    <fullName>SIS_Minimum_staffing__c</fullName>
    <label>Minimum staffing</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>