force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Must_appear_in_the_mark_sheet__c.field-meta.xml
<CustomField>
    <fullName>SIS_Must_appear_in_the_mark_sheet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Must appear in the mark sheet</label>
    <type>Checkbox</type>
</CustomField>