force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Next_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>SIS_Next_Reminder_Date__c</fullName>
    <formula>IF(  SIS_Still_in_revision__c,
SIS_Last_reminder__c  + 
CASE(SIS_Number_of_reminder__c  , 1, 5, 2, 5,1),
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Reminder Date</label>
    <type>DateTime</type>
</CustomField>