force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Number_of_reminder__c.field-meta.xml
<CustomField>
    <fullName>SIS_Number_of_reminder__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of reminder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>