force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Number_of_sessions_planned__c.field-meta.xml
<CustomField>
    <fullName>SIS_Number_of_sessions_planned__c</fullName>
    <label>Number of sessions planned</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>