force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Pedagogical_Code__c.field-meta.xml
<CustomField>
    <fullName>SIS_Pedagogical_Code__c</fullName>
    <label>Code de la catégorie pédagogique</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SIS_Pedagogical_Code</valueSetName>
    </valueSet>
</CustomField>