force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Productions_Deliverables__c.field-meta.xml
<CustomField>
    <fullName>SIS_Productions_Deliverables__c</fullName>
    <inlineHelpText>Section 5.2.1 - Syllabus</inlineHelpText>
    <label>Productions et livrables</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>