force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Program_code__c.field-meta.xml
<CustomField>
    <fullName>SIS_Program_code__c</fullName>
    <label>Program code</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>