force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Reminder_Needed__c.field-meta.xml
<CustomField>
    <fullName>SIS_Reminder_Needed__c</fullName>
    <formula>SIS_Next_Reminder_Date__c  &lt;=  NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reminder Needed</label>
    <type>Checkbox</type>
</CustomField>