force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Results_in_validation__c.field-meta.xml
<CustomField>
    <fullName>SIS_Results_in_validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Results in validation</label>
    <type>Checkbox</type>
</CustomField>