force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Secretary_code__c.field-meta.xml
<CustomField>
    <fullName>SIS_Secretary_code__c</fullName>
    <label>Secretary code</label>
    <type>TextArea</type>
</CustomField>