force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Session_Number__c.field-meta.xml
<CustomField>
    <fullName>SIS_Session_Number__c</fullName>
    <label>Numéro de session</label>
    <length>10</length>
    <type>Text</type>
</CustomField>