force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Session_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>SIS_Session_Start_Date__c</fullName>
    <label>Heure de début</label>
    <type>Time</type>
</CustomField>