force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Session_status__c.field-meta.xml
<CustomField>
    <fullName>SIS_Session_status__c</fullName>
    <label>Statut de la session</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>en attente</fullName>
            </value>
            <value>
                <fullName>ouverte</fullName>
            </value>
            <value>
                <fullName>annulée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>