force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Sessions_number__c.field-meta.xml
<CustomField>
    <fullName>SIS_Sessions_number__c</fullName>
    <label>Sessions number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>