force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Status__c.field-meta.xml
<CustomField>
    <fullName>SIS_Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non applicable</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Revision</fullName>
            </value>
            <value>
                <fullName>Submit</fullName>
            </value>
            <value>
                <fullName>Validated</fullName>
            </value>
            <value>
                <fullName>SIS_Validé</fullName>
                <isActive>false</isActive>
                <label>SIS_Validé</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>