force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Still_in_revision__c.field-meta.xml
<CustomField>
    <fullName>SIS_Still_in_revision__c</fullName>
    <formula>AND(
 SIS_Cours_Session__c = false,
ISPICKVAL(SIS_Status__c,&quot;Revision&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Still in revision</label>
    <type>Checkbox</type>
</CustomField>