force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Submit_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>SIS_Submit_for_Approval__c</fullName>
    <formula>AND(
ISPICKVAL(SIS_Status__c,&quot;Revision&quot;),
 SIS_Cours_Session__c = false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submit for Approval</label>
    <type>Checkbox</type>
</CustomField>