force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Target_staffing__c.field-meta.xml
<CustomField>
    <fullName>SIS_Target_staffing__c</fullName>
    <label>Target staffing</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>