force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Teaching_language__c.field-meta.xml
<CustomField>
    <fullName>SIS_Teaching_language__c</fullName>
    <label>Teaching language</label>
    <type>TextArea</type>
</CustomField>