force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Tech_A_Relancer__c.field-meta.xml
<CustomField>
    <fullName>SIS_Tech_A_Relancer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>A Relancer</label>
    <type>Checkbox</type>
</CustomField>