force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Tech_Course_manager__c.field-meta.xml
<CustomField>
    <fullName>SIS_Tech_Course_manager__c</fullName>
    <formula>SIS_Course_Manager__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Course Manager</label>
    <type>Text</type>
</CustomField>