force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Tech_CPP__c.field-meta.xml
<CustomField>
    <fullName>SIS_Tech_CPP__c</fullName>
    <formula>SIS_CPP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech CPP</label>
    <type>Text</type>
</CustomField>