force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Tech_Date_Relance_J10__c.field-meta.xml
<CustomField>
    <fullName>SIS_Tech_Date_Relance_J10__c</fullName>
    <formula>SIS_Tech_Date_Relance_J5__c  + 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Relance J10</label>
    <type>Date</type>
</CustomField>