force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Tech_Date_Relance_J11__c.field-meta.xml
<CustomField>
    <fullName>SIS_Tech_Date_Relance_J11__c</fullName>
    <formula>SIS_Tech_Date_Relance_J10__c  + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Relance J11</label>
    <type>Date</type>
</CustomField>