force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Tech_Date_Relance_J5__c.field-meta.xml
<CustomField>
    <fullName>SIS_Tech_Date_Relance_J5__c</fullName>
    <formula>Tech_Date_Debut_Relancer__c   + 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Relance J5</label>
    <type>Date</type>
</CustomField>