force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Tech_Program_name__c.field-meta.xml
<CustomField>
    <fullName>SIS_Tech_Program_name__c</fullName>
    <formula>hed__Term__r.hed__Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program name</label>
    <type>Text</type>
</CustomField>