force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Tech_Syllabus_Required_Course__c.field-meta.xml
<CustomField>
    <fullName>SIS_Tech_Syllabus_Required_Course__c</fullName>
    <formula>hed__Course__r.SIS_Syllabus_required__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_Syllabus_Required_Course</label>
    <type>Checkbox</type>
</CustomField>