force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Temporal_coefficient__c.field-meta.xml
<CustomField>
    <fullName>SIS_Temporal_coefficient__c</fullName>
    <label>Temporal coefficient</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>