force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Test_result_is_a_numerical_score__c.field-meta.xml
<CustomField>
    <fullName>SIS_Test_result_is_a_numerical_score__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test result is a numerical score</label>
    <type>Checkbox</type>
</CustomField>