force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Unique_Course_Code__c.field-meta.xml
<CustomField>
    <fullName>SIS_Unique_Course_Code__c</fullName>
    <label>Code unique du cours</label>
    <length>23</length>
    <type>Text</type>
</CustomField>