force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Used_in_the_calculation_of_the_mean__c.field-meta.xml
<CustomField>
    <fullName>SIS_Used_in_the_calculation_of_the_mean__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Used in the calculation of the mean</label>
    <type>Checkbox</type>
</CustomField>