force-app/main/default/objects/hed__Course_Offering__c/fields/SIS_Volume_of_personal_learning_hours__c.field-meta.xml
<CustomField>
    <fullName>SIS_Volume_of_personal_learning_hours__c</fullName>
    <label>Volume of personal learning hours</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>