force-app/main/default/objects/hed__Course_Offering__c/fields/Tech_Date_Debut_Relancer__c.field-meta.xml
<CustomField>
    <fullName>Tech_Date_Debut_Relancer__c</fullName>
    <label>Date Début à Relancer</label>
    <type>Date</type>
</CustomField>