force-app/main/default/objects/hed__Course_Offering__c/listViews/Cours_avec_modalites.listView-meta.xml
<ListView>
    <fullName>Cours_avec_modalites</fullName>
    <columns>SIS_Unique_Course_Code__c</columns>
    <columns>NAME</columns>
    <columns>SIS_Evaluation_Methods_Final_Weight__c</columns>
    <columns>SIS_Course_Manager__c</columns>
    <columns>SIS_completion_method_indicator__c</columns>
    <filterScope>Everything</filterScope>
    <label>Cours avec modalités</label>
</ListView>